--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     	<h1 class="flip">Reflection</h1>
     	<p>The angle of incidence is equal to the angle of reflection. The perceived distance of a reflected image is a function of the distance travelled by the ray.</p>
     	<div id="c1"></div><br>
-    	<p><a href="https://github.com/marinn17">Github repo</a></p>
+    	<p><a href="https://github.com/marinn17/reflection">Github repo</a></p>
     </main>
   </body>
 </html>
